# dotfiles

clang-format/: .clang-format
cmake/: CMakeLists.txt
nvim/: init.lua
nvim/lua/: autocmds.lua  mappings.lua  options.lua
nvim/lua/configs/: lazy.lua
nvim/lua/plugins/: auto-session.lua  bufferline.lua  cmp.lua  colorscheme.lua  comment.lua  conform.lua  fold.lua  lsp.lua  lualine.lua  mason.lua  snacks.lua  telescope.lua  toggleterm.lua  treesitter.lua
powershell/: Microsoft.PowerShell_profile.ps1
vim/: .vimrc
vscode/: keybindings.json  settings.json
wezterm/: wezterm.lua
yazi/: keymap.toml  package.toml  theme.toml  yazi.toml
